@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.tulip" name="Tulip Library" version="2.6.20" provider-name="Twilight0">
+<addon id="script.module.tulip" name="Tulip Library" version="2.7.0" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.python" version="2.24.0"/>
         <import addon="script.module.kodi-six" version="0.0.2"/>
@@ -7,11 +7,15 @@
     <extension point="xbmc.python.module" library="lib" />
     <extension point="xbmc.addon.metadata">
         <summary lang="en">Tulip library with helper functions for Kodi and its forks</summary>
-        <description lang="en">Tulip library combines the best elements from Lambda's "lamlib" and tknorris's shared modules. Also includes various enhancements, newer and improved functions and Python 3 compatibility, though the latter is largely untested. Can also be as standalone</description>
+        <description lang="en">Tulip library combines the best elements from Lambda's "lamlib" and tknorris's shared modules. Also includes various enhancements, newer and improved functions and Python 3 compatibility, though the latter is largely untested. Can also be as standalone utils</description>
         <platform>all</platform>
         <license>GPL-3.0-only</license>
         <source>https://github.com/Twilight0/script.module.tulip</source>
-        <news>[B]2.6.X[/B]
+        <news>[B]2.7.X[/B]
+- New cache functions (taken from ResolveURL and adapted)
+- Various other tweaks
+
+[B]2.6.X[/B]
 - Removed cloudflare related functions as they need too frequent updates
 - Improved parsers module
 - Added feed parser &amp; thumbmaker into youtube module
@@ -25,14 +29,6 @@
 - Added the quote paths function, useful for non ascii characters in urls
 - Fix in url_dispatcher module
 - Added a few functions into control module
-- A few changes for Kodi 19+
-
-[B]2.5.X[/B]
-- Tweaks in client module (updated cfscrape &amp; some minor other tweaks)
-- Added the parsers module
-- Moved parseDOM into parsers module, retained import
-- Moved replaceHTMLCodes into cleantitle module
-- Added the boolean to disable verification of certificate in directory.resolve function
-- Various other tweaks</news>
+- A few changes for Kodi 19+</news>
     </extension>
 </addon>
